# cpp-static-map

./: CMakeLists.txt  README.md  Static_map.hpp  Static_map.tpp  helper.hpp  main.cpp  package.json  static_map.cpp  static_map.h  util.hpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  make_static_map.cpp  make_static_map_no_throw.cpp  static_map.cpp
